refactor: rename project from Universal Quick Actions to QuickBeam
- Update package.json name to 'quickbeam'
- Update manifest.json extension name to 'QuickBeam'
- Update all documentation titles and references
- Update constants and configuration files
- Update HTML titles and headings
- Update repository URLs and team references
- Maintain consistent branding throughout codebase

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Universal Quick Actions - Settings</title>
+  <title>QuickBeam - Settings</title>
   <style>
     body {
       max-width: 800px;
@@ -130,7 +130,7 @@
 </head>
 <body>
   <div class="header">
-    <h1 class="title">Universal Quick Actions</h1>
+    <h1 class="title">QuickBeam</h1>
     <p class="subtitle">Extension Settings & Preferences</p>
   </div>
   
