--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Universal Quick Actions</title>
+  <title>QuickBeam</title>
   <style>
     body {
       width: 300px;
@@ -82,7 +82,7 @@
 </head>
 <body>
   <div class="header">
-    <h1 class="title">Universal Quick Actions</h1>
+    <h1 class="title">QuickBeam</h1>
     <p class="subtitle">Smart text selection tool</p>
   </div>
   
